# igaccgen

./: .gitignore  LICENSE  README.md  config.toml  constants.py  ig.py  main.py  pyproject.toml  utils.py
src/email_agent/: __init__.py  base.py  constants.py  ten_min_mail.py  ten_minute_mail.py
src/faker/: __init__.py  base.py  constants.py  fake_name_generator.py  person.py
src/instagram/: __init__.py  account.py  client.py  constants.py
src/shared/: __init__.py  constants.py
src/utils/: __init__.py  common.py  constants.py  data_generator.py  proxy.py
